# configuration

./: CMakeLists.txt  license
configuration/: Configuration.cpp  Configuration.hpp
configuration_file/: ConfigurationFile.cpp  ConfigurationFile.hpp
parsers/: DefaultParser.cpp  DefaultParser.hpp  ParserInterface.hpp
tests/: example.conf  load_and_save.cpp
